Add basic permission handling
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation("androidx.compose.material:material-icons-extended")
     implementation("androidx.compose.material3:material3")
     implementation("com.google.accompanist:accompanist-systemuicontroller:0.29.2-rc")
+    implementation("com.google.accompanist:accompanist-permissions:0.29.2-rc")
 
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
