--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
         }
     }
     compileOptions {
@@ -67,7 +68,7 @@ dependencies {
     implementation("androidx.compose.material3:material3")
     implementation("com.google.accompanist:accompanist-systemuicontroller:0.29.2-rc")
     implementation("com.google.accompanist:accompanist-permissions:0.29.2-rc")
-    implementation("com.github.re-ovo:ZoomableComposeImage:1.0.3")
+    implementation("com.google.accompanist:accompanist-navigation-animation:0.29.2-rc")
 
     // Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
