--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    lintOptions {
+        baseline file("lint-baseline.xml")
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -103,7 +107,7 @@ dependencies {
     testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test.ext:junit:1.1.5")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
-    androidTestImplementation platform("androidx.compose:compose-bom:2022.10.00")
+    androidTestImplementation platform("androidx.compose:compose-bom:2023.01.00")
     androidTestImplementation("androidx.compose.ui:ui-test-junit4")
     debugImplementation("androidx.compose.ui:ui-tooling")
     debugImplementation("androidx.compose.ui:ui-test-manifest")
