Add staging build flavor for faster compile time under development
We use release by default in order to avoid any slow downs for Jetpack Compose by debugging tools

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
+        staging {
+            initWith release
+            minifyEnabled false
+            shrinkResources false
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
