Add latest changes
- Improve overall scroll speed
- Prepare for Sticky Headers
- Disable parallel GC (causes problems wih gradle)
- Initial bottom bar for Media View
   * Added sharing functionality
   * Added deleting functionality
- Remove unused dependencies (me.onebone:toolbar-compose)

...

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.dot.gallery.provider"
+            android:enabled="true"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+
     </application>
 
 </manifest>
