MediaStore: Simplify and move to Bundle based selection
- Gets rid of duplicate code
- Overall less calls on the cursor -> Faster media parsing

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.dot.gallery.provider"
+            android:authorities="com.dot.gallery.media_provider"
             android:enabled="true"
             android:grantUriPermissions="true"
             android:exported="false">
