Actions: Set proper name for artifact
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/androidCompat.yml
+++ b/.github/workflows/androidCompat.yml
@@ -22,5 +22,5 @@ jobs:
       run: ./gradlew assembleCompatRelease
     - uses: actions/upload-artifact@v3
       with:
-        name: app-debug.apk
+        name: Gallery-compat.apk
         path: app/compat/release/app-compat-release.apk
