Gallery: Avoid using MANAGE_EXTERNAL_STORAGE
Previous implementation in MediaStoreCursor.kt didn't correctly set the uri for accessing the Media without special permissions. It made uri from the direct path of the media, and by doing so it breaks accessing guarded media files like .trashed ones from being accessed.

Update getExifInterface to support the new uri scheme change

Request MANAGE_MEDIA permission on start (OPTIONAL) to bypass ScopedStorage confirmation dialogs if the users wants to.

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,30 @@
 <manifest xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <!--
+        Requested to post notifications regarding media operations activity
+        TMP: Removed
+    -->
+    <!--<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />-->
+
+    <!-- Required to access images for SDK 33+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
+    <!-- Required to access videos for SDK 33+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+
+    <!-- Required to access media for SDK < 33 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+
     <!--
-        Required for trash management
-        TODO: Find a way to avoid using this permission (MANAGE_MEDIA does not give access to trashed media)
+        (OPTIONAL)
+        Requested to bypass another user confirmation requested by
+        ScopedStorage when the user wants to trash, delete or add/remove favorites media
+        TODO: Add UI regarding this choice
     -->
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
-        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.MANAGE_MEDIA"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:name=".GalleryApp"
