StandaloneActivity: Improve logic for launching it from Camera
Instead of opening the requested URI only, try to fetch also the media from the same album if exists.
Improves the experience while opening the Gallery from the Camera app.

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,12 +58,17 @@
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="com.android.camera.action.REVIEW" />
+                <action android:name="android.provider.action.REVIEW" />
+                <action android:name="android.provider.action.REVIEW_SECURE" />
 
                 <data android:scheme="content"/>
+                <data android:scheme="file"/>
                 <data android:mimeType="image/*"/>
                 <data android:mimeType="video/*"/>
 
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
 
