MediaInfo: Improve BottomSheet UI
- Redesign
- Prepare for adding more items like 'Edit', 'Use as' etc in the bottom sheet
- Show location if possible

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
     <!-- Required to access videos for SDK 33+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
+    <!-- Required to access GPS Data of Media -->
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+
+    <!-- Required to download Map Preview for Media -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!-- Required to access media for SDK < 33 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
