--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="${appName}"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:largeHeap="true"
         android:hardwareAccelerated="true"
@@ -80,7 +80,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.dot.gallery.media_provider"
+            android:authorities="${appProvider}"
             android:enabled="true"
             android:grantUriPermissions="true"
             android:exported="false">
