--- a/.github/workflows/androidCompat.yml
+++ b/.github/workflows/androidCompat.yml
@@ -26,5 +26,5 @@ jobs:
       run: ./gradlew assembleCompatRelease
     - uses: actions/upload-artifact@v3
       with:
-        name: Gallery-compat.apk
-        path: app/compat/release/app-compat-release.apk
+        name: Gallery Release (Debug keys)
+        path: app/compat/release/Gallery*.apk
