--- a/.github/workflows/androidCompat.yml
+++ b/.github/workflows/androidCompat.yml
@@ -27,4 +27,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: Gallery Release (Debug keys)
-        path: app/compat/release/Gallery*.apk
+        path: ./app/**/release/*.apk
