--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         android:theme="@style/Theme.Gallery"
         tools:targetApi="33">
         <activity
-            android:name=".MainActivity"
+            android:name=".feature_node.presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Gallery">
             <intent-filter>
@@ -59,7 +59,7 @@
         </activity>
 
         <activity
-            android:name=".StandaloneActivity"
+            android:name=".feature_node.presentation.main.StandaloneActivity"
             android:exported="true"
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
