CI: Add Android SDK setup to accept licences
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/.github/workflows/androidCompat.yml
+++ b/.github/workflows/androidCompat.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 17
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
     - name: Make Gradle executable
       run: chmod +x ./gradlew
     - name: Load Maps Token
