--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 agp = "8.2.0-alpha08"
 appcompat = "1.6.1"
-bom = "2023.05.00"
 coilVersion = "2.4.0"
 glideCompose = "1.0.0-alpha.3"
 exifinterface = "1.3.6"
@@ -16,18 +15,18 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime = "2.6.1"
 activity-compose = "1.7.2"
-compose-bom = "2023.05.00"
+compose-bom = "2023.06.00"
 hilt = "2.46.1"
 material = "1.9.0"
-material3 = "1.1.0"
+material3 = "1.2.0-alpha02"
 media3Ui = "1.0.2"
 media3Exoplayer = "1.0.2"
 navigation-runtime-ktx = "2.6.0"
 profileinstaller = "1.3.1"
 room = "2.5.1"
-accompanist = "0.31.0-alpha"
+accompanist = "0.31.3-beta"
 datastore ="1.1.0-alpha04"
-zoomable = "1.4.3"
+zoomable = "1.5.0-beta1"
 
 [libraries]
 # AndroidX
