--- a/.github/workflows/androidCompat.yml
+++ b/.github/workflows/androidCompat.yml
@@ -12,9 +12,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 17
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
+        distribution: 'adopt'
         java-version: 17
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
