--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ glideSvg = "4.0.2"
 glideVersion = "4.15.1"
 kotlin = "1.9.0"
 kotlinCoroutinesVersion = "1.7.2"
-ksp = "1.8.21-1.0.11"
+ksp = "1.9.0-1.0.11"
 core-ktx = "1.10.1"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -23,7 +23,7 @@ media3Ui = "1.1.0"
 media3Exoplayer = "1.1.0"
 navigation-runtime-ktx = "2.6.0"
 profileinstaller = "1.3.1"
-room = "2.5.2"
+room = "2.6.0-alpha02"
 accompanist = "0.31.3-beta"
 datastore ="1.1.0-alpha04"
 zoomable = "1.5.0-beta1"
@@ -113,6 +113,8 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 androidTest = { id = "com.android.test", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kspAndroid = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+roomPlugin = { id = "androidx.room", version.ref = "room" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 baselineProfilePlugin = { id = "androidx.baselineprofile", version = "1.2.0-alpha16" }
 [bundles]
