--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
         </activity>
 
         <activity
-            android:name=".feature_node.presentation.main.StandaloneActivity"
+            android:name=".feature_node.presentation.standalone.StandaloneActivity"
             android:exported="true"
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
