--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.2.0-alpha10"
 appcompat = "1.6.1"
 coilVersion = "2.4.0"
+fuzzywuzzy = "1.4.0"
 glideCompose = "1.0.0-alpha.3"
 exifinterface = "1.3.6"
 glideSvg = "4.0.2"
@@ -102,6 +103,9 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 
 # View-based AndroidX
 material = { module = "com.google.android.material:material", version.ref = "material" }
+
+# Fuzzy Search
+fuzzywuzzy = { module = "me.xdrop:fuzzywuzzy", version.ref = "fuzzywuzzy" }
 
 # Tests
 junit = { group = "junit", name = "junit", version.ref = "junit" }
