Gallery: Add dummy Set Wallpaper activity
A dummy activity that redirects the ATTACH_DATA intent to the system's CROP_AND_SET_WALLPAPER action which triggers the default/built-in app that knows how to handle and set the wallpaper to the device

Fixes #76

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,17 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".feature_node.presentation.wallpaper.SetWallpaperActivity"
+            android:exported="true"
+            android:launchMode="singleInstance">
+            <intent-filter android:label="@string/set_wallpaper">
+                <action android:name="android.intent.action.ATTACH_DATA"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:mimeType="image/*"/>
+            </intent-filter>
+        </activity>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${appProvider}"
