Gallery: Update dependencies
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.0-alpha15"
+agp = "8.2.0-beta01"
 appcompat = "1.6.1"
 coilVersion = "2.4.0"
 fuzzywuzzy = "1.4.0"
@@ -16,18 +16,18 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime = "2.6.1"
 activity-compose = "1.7.2"
-compose-bom = "2023.06.01"
+compose-bom = "2023.08.00"
 hilt = "2.47"
 material = "1.9.0"
-material3 = "1.2.0-alpha04"
-media3Ui = "1.1.0"
-media3Exoplayer = "1.1.0"
-navigation-runtime-ktx = "2.6.0"
+material3 = "1.2.0-alpha06"
+media3Ui = "1.1.1"
+media3Exoplayer = "1.1.1"
+navigation-runtime-ktx = "2.7.1"
 profileinstaller = "1.3.1"
-room = "2.6.0-alpha02"
-accompanist = "0.31.3-beta"
+room = "2.6.0-beta01"
+accompanist = "0.32.0"
 datastore ="1.1.0-alpha04"
-zoomable = "1.5.0-beta1"
+zoomable = "1.5.0"
 
 [libraries]
 # AndroidX
