--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         distribution: 'adopt'
+        cache: 'gradle'
         java-version: 17
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
