--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,7 +27,7 @@ profileinstaller = "1.3.1"
 room = "2.6.0"
 accompanist = "0.32.0"
 datastore ="1.1.0-alpha06"
-zoomable = "1.5.1"
+zoomable = "1.6.0-beta1"
 
 [libraries]
 # AndroidX
