Gradle: Update dependencies
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.2.0-rc03"
+composeCompiler = "1.5.5"
 appcompat = "1.6.1"
 coilVersion = "2.5.0"
 fuzzywuzzy = "1.4.0"
@@ -9,7 +10,7 @@ glideSvg = "4.0.2"
 glideVersion = "4.16.0"
 kotlin = "1.9.20"
 kotlinCoroutinesVersion = "1.7.3"
-ksp = "1.9.10-1.0.13"
+ksp = "1.9.20-1.0.14"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
@@ -19,14 +20,14 @@ activity-compose = "1.8.1"
 compose-bom = "2023.10.01"
 hilt = "2.48.1"
 material = "1.10.0"
-material3 = "1.2.0-alpha11"
+material3 = "1.2.0-alpha12"
 media3Ui = "1.2.0"
 media3Exoplayer = "1.2.0"
 navigation-runtime-ktx = "2.7.5"
 profileinstaller = "1.3.1"
-room = "2.6.0"
+room = "2.6.1"
 accompanist = "0.32.0"
-datastore ="1.1.0-alpha06"
+datastore ="1.1.0-alpha07"
 zoomable = "1.5.2"
 
 [libraries]
