Gallery: Updated dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,30 +5,30 @@ appcompat = "1.6.1"
 coilVersion = "2.5.0"
 fuzzywuzzy = "1.4.0"
 glideCompose = "1.0.0-beta01"
-exifinterface = "1.3.6"
+exifinterface = "1.3.7"
 glideSvg = "4.0.2"
 glideVersion = "4.16.0"
 kotlin = "1.9.21"
 kotlinCoroutinesVersion = "1.7.3"
-ksp = "1.9.21-1.0.15"
+ksp = "1.9.21-1.0.16"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime = "2.6.2"
-activity-compose = "1.8.1"
+activity-compose = "1.8.2"
 compose-bom = "2023.10.01"
-hilt = "2.49"
-material = "1.10.0"
-material3 = "1.2.0-alpha12"
+hilt = "2.50"
+material = "1.11.0"
+material3 = "1.2.0-beta01"
 media3Ui = "1.2.0"
 media3Exoplayer = "1.2.0"
-navigation-runtime-ktx = "2.7.5"
+navigation-runtime-ktx = "2.7.6"
 profileinstaller = "1.3.1"
 room = "2.6.1"
 accompanist = "0.32.0"
 datastore ="1.1.0-alpha07"
-zoomable = "1.5.2"
+zoomable = "1.5.3"
 
 [libraries]
 # AndroidX
