Gallery: Update dependencies
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.2.1"
-composeCompiler = "1.5.6"
+agp = "8.2.2"
+composeCompiler = "1.5.8"
 appcompat = "1.6.1"
 coilVersion = "2.5.0"
 fuzzywuzzy = "1.4.0"
@@ -8,21 +8,21 @@ glideCompose = "1.0.0-beta01"
 exifinterface = "1.3.7"
 glideSvg = "4.0.2"
 glideVersion = "4.16.0"
-kotlin = "1.9.21"
+kotlin = "1.9.22"
 kotlinCoroutinesVersion = "1.7.3"
-ksp = "1.9.21-1.0.16"
+ksp = "1.9.22-1.0.17"
 core-ktx = "1.12.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime = "2.7.0"
 activity-compose = "1.8.2"
-compose-bom = "2023.10.01"
+compose-bom = "2024.01.00"
 hilt = "2.50"
 material = "1.11.0"
-material3 = "1.2.0-beta02"
-media3Ui = "1.2.0"
-media3Exoplayer = "1.2.0"
+material3 = "1.2.0-rc01"
+media3Ui = "1.2.1"
+media3Exoplayer = "1.2.1"
 navigation-runtime-ktx = "2.7.6"
 profileinstaller = "1.3.1"
 room = "2.6.1"
