--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ glideCompose = "1.0.0-beta01"
 exifinterface = "1.3.7"
 glideSvg = "4.0.2"
 glideVersion = "4.16.0"
+gpuimage = "2.1.0"
 kotlin = "1.9.22"
 kotlinCoroutinesVersion = "1.7.3"
 ksp = "1.9.22-1.0.17"
@@ -85,6 +86,7 @@ androidx-hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", vers
 androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version = "1.1.0" }
 
 # Room
+gpuimage = { module = "jp.co.cyberagent.android:gpuimage", version.ref = "gpuimage" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
