Gallery: Add JPEG-XL support (#145)
Currently it only supports opening JXL files from the file manager, but later is planned to display them in the Gallery as well.

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,16 @@
                 <data android:mimeType="image/*"/>
                 <data android:mimeType="video/*"/>
 
+                <!-- Hacky way to open JPEG-XL files -->
+                <data android:mimeType="image/jxl"/>
+                <data android:host="*" />
+
+                <data android:mimeType="*/*" />
+                <data android:pathPattern=".*\\.jxl" />
+                <data android:pathPattern=".*\\..*\\.jxl" />
+                <data android:pathPattern=".*\\..*\\..*\\.jxl" />
+                <data android:pathPattern=".*\\..*\\..*\\..*\\.jxl" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
