--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 agp = "8.2.2"
 composeCompiler = "1.5.8"
 appcompat = "1.6.1"
-coilVersion = "2.5.0"
+coilVersion = "3.0.0-alpha04"
 fuzzywuzzy = "1.4.0"
 glideCompose = "1.0.0-beta01"
 exifinterface = "1.3.7"
@@ -46,10 +46,10 @@ androidx-navigation-runtime-ktx = { module = "androidx.navigation:navigation-run
 androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstaller", version.ref = "profileinstaller" }
 
 # Coil
-coil-video = { module = "io.coil-kt:coil-video", version.ref = "coilVersion" }
-coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coilVersion" }
-coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coilVersion" }
-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilVersion" }
+coil-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coilVersion" }
+coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coilVersion" }
+coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coilVersion" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilVersion" }
 
 # Glide
 glide-compiler = { module = "com.github.bumptech.glide:ksp", version.ref = "glideVersion" }
