Gallery: Update dependencies and small clean-up
Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,13 +20,13 @@ androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
 lifecycle-runtime = "2.7.0"
 activity-compose = "1.8.2"
-compose-bom = "2024.01.00"
+compose-bom = "2024.02.00"
 hilt = "2.50"
 material = "1.11.0"
-material3 = "1.2.0-rc01"
+material3 = "1.2.0"
 media3Ui = "1.2.1"
 media3Exoplayer = "1.2.1"
-navigation-runtime-ktx = "2.7.6"
+navigation-runtime-ktx = "2.7.7"
 profileinstaller = "1.3.1"
 room = "2.6.1"
 accompanist = "0.34.0"
