--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ material3 = "1.2.0"
 media3Ui = "1.2.1"
 media3Exoplayer = "1.2.1"
 navigation-runtime-ktx = "2.7.7"
+pinchzoomgrid = "0.0.5"
 profileinstaller = "1.3.1"
 room = "2.6.1"
 accompanist = "0.34.0"
@@ -95,6 +96,7 @@ androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navig
 gpuimage = { module = "jp.co.cyberagent.android:gpuimage", version.ref = "gpuimage" }
 jxl-coder-coil = { module = "com.github.awxkee:jxl-coder-coil", version.ref = "jxlCoder" }
 jxl-coder-glide = { module = "com.github.awxkee:jxl-coder-glide", version.ref = "jxlCoder" }
+pinchzoomgrid = { module = "io.github.dokar3:pinchzoomgrid", version.ref = "pinchzoomgrid" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
