--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,7 @@
         <activity
             android:name=".feature_node.presentation.picker.PickerActivity"
             android:exported="true"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.Gallery">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.PICK"/>
