--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!--
-        Requested to post notifications regarding media operations activity
-        TMP: Removed
-    -->
-    <!--<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />-->
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:ignore="SelectedPhotoAccess, ProtectedPermissions">
 
     <!-- Required to access images for SDK 33+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -28,10 +23,8 @@
         (OPTIONAL)
         Requested to bypass another user confirmation requested by
         ScopedStorage when the user wants to trash, delete or add/remove favorites media
-        TODO: Add UI regarding this choice
     -->
-    <uses-permission android:name="android.permission.MANAGE_MEDIA"
-        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.MANAGE_MEDIA" />
 
     <queries>
         <intent>
