--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,13 @@
     -->
     <uses-permission android:name="android.permission.MANAGE_MEDIA" />
 
+    <!--
+        (OPTIONAL)
+        Requested to create albums outside Internal Storage/Pictures or Internal Storage/DCIM
+    -->
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
     <queries>
         <intent>
             <action android:name="android.intent.action.EDIT" />
